tests/data-clumps/test-cases/parameter-parameter/negative-insufficient-shared/java/source/AppointmentScheduler.java
public class AppointmentScheduler {
    public void schedule(String patientId, String doctorId, String appointmentDate) {
        System.out.println("Scheduling appointment on " + appointmentDate);
    }
}
